<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>native_adapters</name>
  <version>1.0.0</version>
  <description>ROS2 Type adapters for common C++ frameworks</description>
  <maintainer email="roncapat@gmail.com">Patrick Roncagliolo</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>libopencv-dev</build_export_depend>
  <build_export_depend>libpcl-common</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
