<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>native_adapters</name>
  <version>1.0.0</version>
  <description>ROS2 Type adapters for common C++ frameworks</description>
  <maintainer email="roncapat@gmail.com">Patrick Roncagliolo</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>dem_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>libpcl-common</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
